fix the alignment of the form - group

--- a/src/component/Body/Body.scss
+++ b/src/component/Body/Body.scss
@@ -7,7 +7,6 @@
   gap: 50px;
   .form-container{
     display: flex;
-    align-items: center;
     justify-content: center;
     gap: 50px;
   }
